--- a/test/fixture/custom.html
+++ b/test/fixture/custom.html
@@ -8,6 +8,8 @@
 
 
     <!-- bower-js:start -->
+    <script src="bower_components/jquery/jquery.js"></script>
     <!-- bower-js:end -->
 </body>
 </html>
+<!-- Added by Fake Extension -->
